--- a/style.css
+++ b/style.css
@@ -3,9 +3,14 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-.start {
-    text-align: center;
-}
 .akan {
-    align-items: flex-end;
-}
+   
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+.akan td, .akan th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
