--- a/style.css
+++ b/style.css
@@ -13,4 +13,13 @@ body {
     border: 1px solid #ddd;
     padding: 8px;
   }
-  
+.akan tr:nth-child(even){background-color: #f2f2f2;}
+
+/* #customers tr:hover {background-color: #ddd;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white; */
