--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ body {
   }
 .akan tr:nth-child(even){background-color: #f2f2f2;}
 
-/* #customers tr:hover {background-color: #ddd;}
+.akan tr:hover {background-color: #ddd;}
 
-#customers th {
+.akan th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
