Add style to iframe

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(images/Ghana-Independence.jpg);
+    background-image: url();
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -21,13 +21,25 @@ body {
   text-align: left;
   background-color: #04AA6D;
   color: white; }
-button {
+/* button {
     text-align: center;
     cursor: pointer;
     border-radius: 0.3em;
     box-sizing: border-box;
     padding:16px 80px;
-    margin:10px;
     text-decoration:none;
     background-color: lightcoral;
-}
+} */
+.iframe-container{
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .iframe-container iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
