--- a/style.css
+++ b/style.css
@@ -30,16 +30,9 @@ body {
     text-decoration:none;
     background-color: lightcoral;
 } */
-.iframe-container{
+.iframe{
     position: relative;
     width: 100%;
-    padding-bottom: 56.25%; 
+    padding-bottom: 2%;
     height: 0;
-  }
-  .iframe-container iframe{
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
   }
