--- a/style.css
+++ b/style.css
@@ -1,63 +1,76 @@
- 
-.akan {
-    border-collapse: collapse;   
-  }
+ .akan {
+   border-collapse: collapse;
+ }
 
-.akan td, .akan th {
-    border: 1px solid #ddd;
-    padding: 8px; 
-  }
-.akan tr:nth-child(even){background-color: #f2f2f2;}
+ .akan td, .akan th {
+   border: 1px solid #ddd;
+   padding: 8px;
+ }
 
-.akan tr:hover {background-color: #ddd;}
+ .akan tr:nth-child(even) {
+   background-color: #f2f2f2;
+ }
 
-.akan th {
-  padding-top: 12px;
-  padding-bottom: 12px; 
-  text-align: left;
-  background-color: #04AA6D;
-  color: white; }
-button {
+ .akan tr:hover {
+   background-color: #ddd;
+ }
+
+ .akan th {
+   padding-top: 12px;
+   padding-bottom: 12px;
+   text-align: left;
+   background-color: #04AA6D;
+   color: white;
+ }
+
+ button {
    color: rgb(62, 88, 231);
-    text-align: center;
-    cursor: pointer;
-    /* border-radius: 0.3em;
+   text-align: center;
+   cursor: pointer;
+   /* border-radius: 0.3em;
     box-sizing: border-box;
     padding:16px 80px; */
-    text-decoration:none;
-    background-color: rgb(165, 156, 156);
-} 
-.iframe{
-    position: relative;
-    width: 100%;
-    padding-bottom: 2%;
-    height: 0;
-    
-  }  
-.row img {
-  width: 300px;
-  height:250px ;
-}
-.row {
- text-align: center;
-}
-h1 {
-  text-decoration: underline;
-  color: darkkhaki;
-}
-.thumbnail {
-  font-size: large;
-}
-.form {
-  font-size: large;
-  
-}
-.embed-responsive {
-  text-align:center; 
-  /* display:table-cell; 
+   text-decoration: none;
+   background-color: rgb(165, 156, 156);
+ }
+
+ .iframe {
+   position: relative;
+   width: 100%;
+   padding-bottom: 2%;
+   height: 0;
+
+ }
+
+ .row img {
+   width: 300px;
+   height: 250px;
+ }
+
+ .row {
+   text-align: center;
+ }
+
+ h1 {
+   text-decoration: underline;
+   color: darkkhaki;
+ }
+
+ .thumbnail {
+   font-size: large;
+ }
+
+ .form {
+   font-size: large;
+
+ }
+
+ .embed-responsive {
+   text-align: center;
+   /* display:table-cell; 
   vertical-align: middle;  */
-  left: 60%;
-  /* margin: 0px; */
-  /* padding-bottom: 10px; */
-  
-}
+   left: 60%;
+   /* margin: 0px; */
+   /* padding-bottom: 10px; */
+
+ }
